<resources>
    <string name="app_name">White-Label SoftPOS</string>
    <string name="powered_by_">Powered by FINEXUS Cards Sdn Bhd</string>
    <string name="title_activity_login">LoginActivity</string>
    <string name="prompt_email">Email</string>
    <string name="prompt_account">Account</string>
    <string name="prompt_current_password">Current Password</string>
    <string name="prompt_password">Password</string>
    <string name="prompt_password_confirm">Password Confirmation</string>
    <string name="verification_code">Verification code</string>
    <string name="action_sign_in">Sign in or register</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="welcome">"Welcome !"</string>
    <string name="invalid_username">Not a valid username</string>
    <string name="invalid_password">Password must be >5 characters</string>
    <string name="login_failed">"Login failed"</string>
    <string name="reset_password">Reset password</string>
    <string name="get_verification_code">Get code</string>
    <string name="recover_password_notice">Recover your password now.</string>
    <string name="change_password_notice">Change password for</string>
    <string name="reset">Reset</string>
    <string name="register_label">Register</string>
    <string name="user_register_notice">Create an account to access all the features of MSPay.</string>
    <string name="accept_terms_conditions">Accept terms and conditions</string>
    <string name="registration">Registration</string>
    <string name="sdk_init_failed">"SDK initialization failed"</string>
    <string name="sdk_init_ok">"SDK initialization success"</string>
    <string name="welcome_to_mspay">Welcome to White-Label SoftPOS!</string>
    <string name="access_merchant_shop">Access to your merchant shop.</string>
    <string name="forgot_password">Forgot password?</string>
    <string name="login">Login</string>
    <string name="dont_have_account">Don\'t have an account?</string>
    <string name="register">Register!</string>
    <string name="key_cancel">Cancel</string>
    <string name="trans_sale">Sale</string>
    <string name="pay_with_card">Pay by card</string>
    <string name="pay_with_qr">Pay by QR</string>
    <string name="show_process">Processing…</string>
    <string name="show_request">Authorisation request…</string>
    <string name="show_receive">Receiving Authorisation…</string>
    <string name="show_attestation">Attestation…</string>
    <string name="network_check">Network checking…</string>
    <string name="pre_check">pre checking…</string>
    <string name="attestation_failed">Attestation failed.</string>
    <string name="tap_card_display">Tap the card on the phone</string>
    <string name="trans_success">Approved</string>
    <string name="trans_error">Declined</string>
    <string name="trans_authorized">Authorized</string>
    <string name="trans_declined">Declined Code:\u0020%1$s</string>
    <string name="new_sale">New sale</string>
    <string name="app2app_new_sale">Exit</string>
    <string name="back">Return to start</string>
    <string name="check_receipt">Check receipt</string>
    <string name="history">History</string>
    <string name="history_sale">SALE</string>
    <string name="no_history_detect">No transaction record detected.</string>
    <string name="start_new_payment">Start new transaction</string>
    <string name="action_retry">Retry</string>
    <string name="mid">MID</string>
    <string name="tid">TID</string>
    <string name="spid">SPID</string>
    <string name="user">User</string>
    <string name="cardno">CardNo.</string>
    <string name="batchno">Batch no</string>
    <string name="pid">PID (ORDER)</string>
    <string name="sale_status">SALE - %1$s</string>
    <string name="refund_status">REFUND - %1$s</string>
    <string name="void_sale">Void</string>
    <string name="void_transaction">Void Transaction?</string>
    <string name="void_failed">Void failed: %1$s</string>
    <string name="refund_failed">Refund failed: %1$s</string>
    <string name="transaction_voided">Transaction voided</string>
    <string name="not_implemented">Not implemented yet</string>
    <string name="amount_display">$%1$s</string>
    <string name="receipt_root">I AGREE TO PAY THE TOTAL AMOUNT ACCORDING TO CARD \nISSUER AGREEMENT.</string>
    <string name="receipt_amount">USD: %1$s</string>
    <string name="receipt_authCode">Approval: %1$s</string>
    <string name="receipt_cardNo">************%1$s (T)</string>
    <string name="receipt_tc">TC: %1$s</string>
    <string name="shared_pref">shared preference</string>
    <string name="visa_blue_hex">15195A</string>
    <string name="backdrop_color_hex">backdrop_color_hex</string>
    <string name="backdrop_color">backdrop_color</string>
    <string name="custom_backdrop_color_hex">custom_backdrop_color_hex</string>
    <string name="custom_backdrop_color">custom_backdrop_color</string>
    <string name="constrained_flags">constrained_flags</string>
    <string name="audio">audio</string>
    <string name="haptics">haptics</string>
    <string name="check_mark">check_mark</string>
    <string name="wrong_email_password_notice">Wrong Email or Password.Please check it.</string>
    <string name="register_merchant">Register a merchant</string>
    <string name="register_merchant_notice">Enter all the information about the merchant shop.</string>
    <string name="merchant_name">Merchant name</string>
    <string name="merchant_id">Merchant ID</string>
    <string name="address">Address</string>
    <string name="contact_number">Contact Number</string>
    <string name="contact_email">Contact Email</string>
    <string name="business_license_id">Business License ID</string>
    <string name="shop_type">Shop type</string>
    <string name="shop_type_1">Shop type 1</string>
    <string name="shop_type_2">Shop type 2</string>
    <string name="shop_type_3">Shop type 3</string>
    <string name="insert_license_picture">Insert License Picture</string>
    <string name="insert_shop_picture">Insert Shop Picture</string>
    <string name="next">Next</string>
    <string name="legal_user_name">Legal User Name</string>
    <string name="legal_user_contact">Legal User Contact</string>
    <string name="bank_account">Bank Account</string>
    <string name="legal_user_id_number">Legal User ID Number</string>
    <string name="legal_user_address">Legal User Address</string>
    <string name="insert_id_picture">Insert ID Picture</string>
    <string name="submit">Submit</string>
    <string name="image_add_button">+</string>
    <string name="profile">Profile</string>
    <string name="user_name">Mee Go</string>
    <string name="merchant_shop">Merchant Shop</string>
    <string name="shop_user_list">Shop User List</string>
    <string name="shop_info">Shop Info</string>
    <string name="merchant_owner_tag">Merchant Owner:</string>
    <string name="address_tag">Address:</string>
    <string name="contact_tag">Contact:</string>
    <string name="merchant_type_tag">Merchant Type:</string>
    <string name="merchant_code_tag">Merchant Code:</string>
    <string name="user_info_title">User Info</string>
    <string name="shop_terminal_list">Shop Terminal List</string>
    <string name="switch_shop">Switch Shop</string>
    <string name="user_info">User_info</string>
    <string name="name">Name:</string>
    <string name="modify">Modify</string>
    <string name="email">Email:</string>
    <string name="change_password">Change Password</string>
    <string name="open_fingerprint_login">Open Fingerprint Login</string>
    <string name="close_fingerprint_login">Close Fingerprint Login</string>
    <string name="log_out">Log out</string>
    <string name="login_ing">Login…</string>
    <string name="verification_code_sent_notice">The verification code has been sent to your email.</string>
    <string name="money_count_empty_notice">The money count should not be empty.</string>
    <string name="no_camera_permission_notice">Please allow the camera pemission firstly.</string>
    <string name="query_all_txn">Retrieving All Transactions</string>
    <string name="void_approved">Void Approved</string>
    <string name="refund_approved">Refund Approved</string>
    <string name="init_param_error">Init EMV parameters error.</string>
    <string name="query_trans_failed">Query Transaction failed: %1$s</string>
    <string name="send_email_failed">Send email failed: %1$s</string>
    <string name="load_config_failed">Load config failed: %1$s</string>
    <string name="load_qr_receipt_failed">Load QR receipt failed: %1$s</string>
    <string name="get_qr_receipt">Loading QR receipt…</string>
    <string name="do_attestation">Attestation…</string>
    <string name="qr_receipt_null">QR receipt is empty</string>
    <string name="qr_payment_finished">Payment Approved!</string>
    <string name="qr_expired">QR code is expired,you can manual query transactions if pay completed.</string>
    <string name="get_transaction">Retrieving transaction…</string>
    <string name="transaction_title">Transaction</string>
    <string name="online_processing">Processing…</string>
    <string name="exit">Exit</string>
    <string name="cancel">Cancel</string>
    <string name="confirm">Confirm</string>
    <string name="org_txn_no_empty">Original Transaction Id Error</string>
    <string name="admin_pwd_empty">Admin password is empty</string>
    <string name="txn_type_is_empty">Transaction Type Error</string>
    <string name="trans_cancelled">Transaction was cancelled</string>
    <string name="soft_pos_no_login">SoftPos application need to login first</string>
    <string name="mch_part_no_empty">Merchant Partner Number Error</string>
    <string name="cancel_txn">Cancel Payment?</string>
    <string name="remove_card_text">Please remove card</string>
    <string name="new_version_available">New version available</string>
    <string name="display_upgrade_app">Please upgrade softpos application</string>
    <string name="cancel_upgrade_app">No,Thanks</string>
    <string name="confirm_upgrade_app">Upgrade</string>
    <string name="softpos_init_failed">"SoftPOS initialization failed"</string>
    <string name="check_nfc_error">Check NFC permissions and status.</string>
    <string name="not_supported_payment">Not supported yet</string>
    <string name="version_number">Version Number:</string>
    <string name="sdk_id">SDK ID:</string>
    <string name="clear_signature">Clear signature</string>
    <string name="confirm_signature">Confirm</string>
    <string name="signature_verified">Signature verified</string>
    <string name="activation_title">MineSec White-Label SoftPOS</string>
    <string name="activation_code_prompt">Activation Code</string>
    <string name="activation_check_in">Activate</string>
    <string name="activation_step1_prompt">・MineSec White-Label SoftPOS</string>
    <string name="activation_step2_prompt">・Go to “devices”</string>
    <string name="add_description">Add description</string>
    <string name="charge_str">Charge</string>
    <string name="label_keypad_1">1</string>
    <string name="label_keypad_2">2</string>
    <string name="label_keypad_3">3</string>
    <string name="label_keypad_4">4</string>
    <string name="label_keypad_5">5</string>
    <string name="label_keypad_6">6</string>
    <string name="label_keypad_7">7</string>
    <string name="label_keypad_8">8</string>
    <string name="label_keypad_9">9</string>
    <string name="label_keypad_00">00</string>
    <string name="label_keypad_0">0</string>
    <string name="label_keypad_back">←</string>
    <string name="currency_usd">$</string>
    <string name="key_back_tag">back</string>
    <string name="drawer_sale">Sale</string>
    <string name="drawer_settlement">Settlement</string>
    <string name="drawer_history">History</string>
    <string name="drawer_auth">Pre-auth</string>
</resources>